--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ a:hover {
     text-align: center;
 }
 
-/* 이거  주석처리한 부분은 왜 안되는건지 물어보셈
+/* 이거  주석처리한 부분은 왜 안되는건지 여쭤보기
 p.video{
    position: relative;
     left:40%;
